--- a/1_data_retrieval/fight_night_scraper.ipynb
+++ b/1_data_retrieval/fight_night_scraper.ipynb
@@ -26,7 +26,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Function to get HTML response\n",
     "def get_html(url):\n",
     "    response = requests.get(url)\n",
@@ -36,7 +35,7 @@
     "        return None\n",
     "        \n",
     "# Function to parse event URLs from a single events page\n",
-    "def parse_event_urls(html):\n",
+    "def get_all_event_urls(html):\n",
     "    soup = BeautifulSoup(html, 'html.parser')\n",
     "    event_links = []\n",
     "\n",
@@ -52,32 +51,11 @@
     "    soup = BeautifulSoup(html, 'html.parser')\n",
     "    details = {}\n",
     "\n",
-    "    details['Event Name'] = soup.find('h2', class_='b-content__title').text.strip()\n",
-    "    details['Date'] = soup.find('li', class_='b-list__box-list-item').text.strip().split(':')[-1].strip()\n",
-    "    details['Location'] = soup.find_all('li', class_='b-list__box-list-item')[1].text.strip().split(':')[-1].strip()\n",
-    "    details['URL'] = soup.find('a', class_='b-link b-link_style_black', href=True).get('href', '').strip('\"')\n",
+    "    details['event_name'] = soup.find('h2', class_='b-content__title').text.strip()\n",
+    "    details['date'] = soup.find('li', class_='b-list__box-list-item').text.strip().split(':')[-1].strip()\n",
+    "    details['location'] = soup.find_all('li', class_='b-list__box-list-item')[1].text.strip().split(':')[-1].strip()\n",
     "\n",
-    "    return details\n",
-    "\n",
-    "# Function to get all event URLs from all pages (Pagination)\n",
-    "def get_all_event_urls(base_url):\n",
-    "    event_urls = []\n",
-    "    page_number = 1\n",
-    "\n",
-    "    while True:\n",
-    "        url = f\"{base_url}&page={page_number}\"\n",
-    "        html = get_html(url)\n",
-    "        if not html:\n",
-    "            break\n",
-    "\n",
-    "        urls = parse_event_urls(html)\n",
-    "        if not urls:\n",
-    "            break\n",
-    "\n",
-    "        event_urls.extend(urls)\n",
-    "        page_number += 1\n",
-    "\n",
-    "    return event_urls"
+    "    return details"
    ]
   },
   {
@@ -95,10 +73,10 @@
    ],
    "source": [
     "# URL of the UFC stats completed events page\n",
-    "base_url = 'http://www.ufcstats.com/statistics/events/completed?'\n",
+    "base_url = 'http://www.ufcstats.com/statistics/events/completed?page=all'\n",
     "\n",
     "# Get all event URLs\n",
-    "event_urls = get_all_event_urls(base_url)\n",
+    "event_urls = get_all_event_urls(get_html(base_url))\n",
     "\n",
     "if event_urls:\n",
     "    fight_nights = []\n",
@@ -106,6 +84,7 @@
     "        event_html = get_html(event_url)\n",
     "        if event_html:\n",
     "            details = parse_fight_night_details(event_html)\n",
+    "            details['url'] = event_url\n",
     "            fight_nights.append(details)\n",
     "\n",
     "    # Create a DataFrame and save to a CSV file\n",
@@ -118,167 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Event Name</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>URL</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>UFC Fight Night: Barboza vs. Murphy</td>\n",
-       "      <td>May 18, 2024</td>\n",
-       "      <td>Las Vegas, Nevada, USA</td>\n",
-       "      <td>http://www.ufcstats.com/fighter-details/396fe8...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>UFC Fight Night: Lewis vs. Nascimento</td>\n",
-       "      <td>May 11, 2024</td>\n",
-       "      <td>St. Louis, Missouri, USA</td>\n",
-       "      <td>http://www.ufcstats.com/fighter-details/d3df1a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>UFC 301: Pantoja vs. Erceg</td>\n",
-       "      <td>May 04, 2024</td>\n",
-       "      <td>Rio de Janeiro, Rio de Janeiro, Brazil</td>\n",
-       "      <td>http://www.ufcstats.com/fighter-details/a0f000...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>UFC Fight Night: Nicolau vs. Perez</td>\n",
-       "      <td>April 27, 2024</td>\n",
-       "      <td>Las Vegas, Nevada, USA</td>\n",
-       "      <td>http://www.ufcstats.com/fighter-details/ab2b4f...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>UFC 300: Pereira vs. Hill</td>\n",
-       "      <td>April 13, 2024</td>\n",
-       "      <td>Las Vegas, Nevada, USA</td>\n",
-       "      <td>http://www.ufcstats.com/fighter-details/e5549c...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>686</th>\n",
-       "      <td>UFC 5: The Return of the Beast</td>\n",
-       "      <td>April 07, 1995</td>\n",
-       "      <td>Charlotte, North Carolina, USA</td>\n",
-       "      <td>http://www.ufcstats.com/fighter-details/c670aa...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>687</th>\n",
-       "      <td>UFC 4: Revenge of the Warriors</td>\n",
-       "      <td>December 16, 1994</td>\n",
-       "      <td>Tulsa, Oklahoma, USA</td>\n",
-       "      <td>http://www.ufcstats.com/fighter-details/429e7d...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>688</th>\n",
-       "      <td>UFC 3: The American Dream</td>\n",
-       "      <td>September 09, 1994</td>\n",
-       "      <td>Charlotte, North Carolina, USA</td>\n",
-       "      <td>http://www.ufcstats.com/fighter-details/ad047e...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>689</th>\n",
-       "      <td>UFC 2: No Way Out</td>\n",
-       "      <td>March 11, 1994</td>\n",
-       "      <td>Denver, Colorado, USA</td>\n",
-       "      <td>http://www.ufcstats.com/fighter-details/429e7d...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>690</th>\n",
-       "      <td>UFC 1: The Beginning</td>\n",
-       "      <td>November 12, 1993</td>\n",
-       "      <td>Denver, Colorado, USA</td>\n",
-       "      <td>http://www.ufcstats.com/fighter-details/429e7d...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>691 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                Event Name                Date  \\\n",
-       "0      UFC Fight Night: Barboza vs. Murphy        May 18, 2024   \n",
-       "1    UFC Fight Night: Lewis vs. Nascimento        May 11, 2024   \n",
-       "2               UFC 301: Pantoja vs. Erceg        May 04, 2024   \n",
-       "3       UFC Fight Night: Nicolau vs. Perez      April 27, 2024   \n",
-       "4                UFC 300: Pereira vs. Hill      April 13, 2024   \n",
-       "..                                     ...                 ...   \n",
-       "686         UFC 5: The Return of the Beast      April 07, 1995   \n",
-       "687         UFC 4: Revenge of the Warriors   December 16, 1994   \n",
-       "688              UFC 3: The American Dream  September 09, 1994   \n",
-       "689                      UFC 2: No Way Out      March 11, 1994   \n",
-       "690                   UFC 1: The Beginning   November 12, 1993   \n",
-       "\n",
-       "                                   Location  \\\n",
-       "0                    Las Vegas, Nevada, USA   \n",
-       "1                  St. Louis, Missouri, USA   \n",
-       "2    Rio de Janeiro, Rio de Janeiro, Brazil   \n",
-       "3                    Las Vegas, Nevada, USA   \n",
-       "4                    Las Vegas, Nevada, USA   \n",
-       "..                                      ...   \n",
-       "686          Charlotte, North Carolina, USA   \n",
-       "687                    Tulsa, Oklahoma, USA   \n",
-       "688          Charlotte, North Carolina, USA   \n",
-       "689                   Denver, Colorado, USA   \n",
-       "690                   Denver, Colorado, USA   \n",
-       "\n",
-       "                                                   URL  \n",
-       "0    http://www.ufcstats.com/fighter-details/396fe8...  \n",
-       "1    http://www.ufcstats.com/fighter-details/d3df1a...  \n",
-       "2    http://www.ufcstats.com/fighter-details/a0f000...  \n",
-       "3    http://www.ufcstats.com/fighter-details/ab2b4f...  \n",
-       "4    http://www.ufcstats.com/fighter-details/e5549c...  \n",
-       "..                                                 ...  \n",
-       "686  http://www.ufcstats.com/fighter-details/c670aa...  \n",
-       "687  http://www.ufcstats.com/fighter-details/429e7d...  \n",
-       "688  http://www.ufcstats.com/fighter-details/ad047e...  \n",
-       "689  http://www.ufcstats.com/fighter-details/429e7d...  \n",
-       "690  http://www.ufcstats.com/fighter-details/429e7d...  \n",
-       "\n",
-       "[691 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df"
    ]
