finish data retrieval

--- a/1_data_retrieval/2_event_scraper.ipynb
+++ b/1_data_retrieval/2_event_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,15 @@
     "        details['fight_url'] = fight_row.get('data-link')\n",
     "        fight_details.append(details)\n",
     "\n",
-    "    return fight_details[1:], fighter_urls\n",
-    "\n",
+    "    return fight_details[1:], fighter_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Read event URLs from CSV file\n",
     "df = pd.read_csv('ufc_fight_nights.csv')\n",
     "\n",
@@ -60,18 +67,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create DataFrame and save to CSV\n",
     "fight_df = pd.DataFrame(all_fights)\n",
-    "fight_df.to_csv('ufc_fight_data.csv', index=False)\n",
+    "fight_df.to_csv('ufc_event_data.csv', index=False)\n",
     "# From dictionary \n",
     "all_fighter_urls = all_fighter_urls.values()\n",
     "all_fighter_urls = pd.DataFrame(all_fighter_urls)\n",
     "all_fighter_urls.to_csv('all_fighter_url.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
