--- a/2_data_preparation/1_merge_data.ipynb
+++ b/2_data_preparation/1_merge_data.ipynb
@@ -30,12 +30,12 @@
     "f2_merged_df.drop(['name_f1', 'name_f2'], axis=1, inplace=True)\n",
     "\n",
     "# Save the merged DataFrame to a new CSV file\n",
-    "f2_merged_df.to_csv(\"ufc_data.csv\", index=False)"
+    "f2_merged_df.to_csv(\"ufc_data_merged.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,21 +59,15 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f2_merged_df.columns"
+    "f2_merged_df.columns\n",
+    "## needs to be cleaned up, rearranged "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
