clean features and saveto match fighter info commonly available

--- a/3_cluster_fight_style/3_odds_by_fighterstyle_and_allround.ipynb
+++ b/3_cluster_fight_style/3_odds_by_fighterstyle_and_allround.ipynb
@@ -2436,8 +2436,8 @@
     "# Check the merged DataFrame\n",
     "display(data_with_win_percentages.head())\n",
     "\n",
-    "# Save the DataFrame to a CSV file for visualization in Tableau\n",
-    "data_with_win_percentages.to_csv('data_with_win_percentages.csv', index=False)\n"
+    "# # Save the DataFrame to a CSV file for visualization in Tableau\n",
+    "# data_with_win_percentages.to_csv('data_with_win_percentages.csv', index=False)\n"
    ]
   },
   {
@@ -2464,7 +2464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
