--- a/4_predict_winner/1_feature_engineering.ipynb
+++ b/4_predict_winner/1_feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "(7289, 75)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1331,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1483,7 @@
        "[7289 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1509,7 +1509,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1565,12 +1565,24 @@
     "fight_stats['f1_sub_avg'] = (data['f1_sub_att'] / data['length_in_seconds']) * 60\n",
     "fight_stats['f2_sub_avg'] = (data['f2_sub_att'] / data['length_in_seconds']) * 60\n",
     "\n",
+    "fight_stats['f1_height'] = data['f1_height'] \n",
+    "fight_stats['f2_height'] = data['f2_height'] \n",
+    "\n",
+    "fight_stats['f1_weight'] = data['f1_weight'] \n",
+    "fight_stats['f2_weight'] = data['f2_weight'] \n",
+    "\n",
+    "fight_stats['f1_reach'] = data['f1_reach'] \n",
+    "fight_stats['f2_reach'] = data['f2_reach'] \n",
+    "\n",
+    "fight_stats['f1_stance'] = data['f1_stance'] \n",
+    "fight_stats['f2_stance'] = data['f2_stance'] \n",
+    "\n",
     "fight_stats = fight_stats.round(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1595,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1594,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1640,6 +1652,14 @@
        "      <th>f2_td_def_%</th>\n",
        "      <th>f1_sub_avg</th>\n",
        "      <th>f2_sub_avg</th>\n",
+       "      <th>f1_height</th>\n",
+       "      <th>f2_height</th>\n",
+       "      <th>f1_weight</th>\n",
+       "      <th>f2_weight</th>\n",
+       "      <th>f1_reach</th>\n",
+       "      <th>f2_reach</th>\n",
+       "      <th>f1_stance</th>\n",
+       "      <th>f2_stance</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1667,6 +1687,14 @@
        "      <td>0</td>\n",
        "      <td>0.57</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>165.1</td>\n",
+       "      <td>160.02</td>\n",
+       "      <td>56.70</td>\n",
+       "      <td>52.16</td>\n",
+       "      <td>170.18</td>\n",
+       "      <td>160.02</td>\n",
+       "      <td>Orthodox</td>\n",
+       "      <td>Orthodox</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
@@ -1692,6 +1720,14 @@
        "      <td>50</td>\n",
        "      <td>0.22</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>190.5</td>\n",
+       "      <td>182.88</td>\n",
+       "      <td>92.99</td>\n",
+       "      <td>120.20</td>\n",
+       "      <td>200.66</td>\n",
+       "      <td>190.50</td>\n",
+       "      <td>Orthodox</td>\n",
+       "      <td>Orthodox</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1710,9 +1746,13 @@
        "495     1.71           NaN         70.00       8.57        0.0          100   \n",
        "997     3.93           NaN         47.06       3.27        0.0           50   \n",
        "\n",
-       "     f2_td_acc_%  f1_td_def_%  f2_td_def_%  f1_sub_avg  f2_sub_avg  \n",
-       "495            0          100            0        0.57         0.0  \n",
-       "997            0          100           50        0.22         0.0  "
+       "     f2_td_acc_%  f1_td_def_%  f2_td_def_%  f1_sub_avg  f2_sub_avg  f1_height  \\\n",
+       "495            0          100            0        0.57         0.0      165.1   \n",
+       "997            0          100           50        0.22         0.0      190.5   \n",
+       "\n",
+       "     f2_height  f1_weight  f2_weight  f1_reach  f2_reach f1_stance f2_stance  \n",
+       "495     160.02      56.70      52.16    170.18    160.02  Orthodox  Orthodox  \n",
+       "997     182.88      92.99     120.20    200.66    190.50  Orthodox  Orthodox  "
       ]
      },
      "metadata": {},
@@ -2069,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2078,20 +2118,20 @@
        "0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# nan value bc dividing by 0 \n",
-    "fight_stats.fillna('', inplace=True)\n",
+    "fight_stats.fillna('0', inplace=True)\n",
     "fight_stats.isna().sum().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2137,6 +2177,14 @@
        "      <th>f2_td_def_%</th>\n",
        "      <th>f1_sub_avg</th>\n",
        "      <th>f2_sub_avg</th>\n",
+       "      <th>f1_height</th>\n",
+       "      <th>f2_height</th>\n",
+       "      <th>f1_weight</th>\n",
+       "      <th>f2_weight</th>\n",
+       "      <th>f1_reach</th>\n",
+       "      <th>f2_reach</th>\n",
+       "      <th>f1_stance</th>\n",
+       "      <th>f2_stance</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2164,6 +2212,14 @@
        "      <td>34</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>175.26</td>\n",
+       "      <td>180.34</td>\n",
+       "      <td>65.77</td>\n",
+       "      <td>65.77</td>\n",
+       "      <td>185.42</td>\n",
+       "      <td>190.50</td>\n",
+       "      <td>Orthodox</td>\n",
+       "      <td>Orthodox</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2189,6 +2245,14 @@
        "      <td>100</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>182.88</td>\n",
+       "      <td>182.88</td>\n",
+       "      <td>77.11</td>\n",
+       "      <td>77.11</td>\n",
+       "      <td>195.58</td>\n",
+       "      <td>193.04</td>\n",
+       "      <td>Orthodox</td>\n",
+       "      <td>Orthodox</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2214,6 +2278,14 @@
        "      <td>17</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>185.42</td>\n",
+       "      <td>177.80</td>\n",
+       "      <td>77.11</td>\n",
+       "      <td>77.11</td>\n",
+       "      <td>195.58</td>\n",
+       "      <td>182.88</td>\n",
+       "      <td>Orthodox</td>\n",
+       "      <td>Orthodox</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2240,13 +2312,18 @@
        "1        0.0            0            0          100          100         0.0   \n",
        "2        1.0           83           12           88           17         0.0   \n",
        "\n",
-       "   f2_sub_avg  \n",
-       "0         0.0  \n",
-       "1         0.0  \n",
-       "2         0.0  "
+       "   f2_sub_avg  f1_height  f2_height  f1_weight  f2_weight  f1_reach  f2_reach  \\\n",
+       "0         0.0     175.26     180.34      65.77      65.77    185.42    190.50   \n",
+       "1         0.0     182.88     182.88      77.11      77.11    195.58    193.04   \n",
+       "2         0.0     185.42     177.80      77.11      77.11    195.58    182.88   \n",
+       "\n",
+       "  f1_stance f2_stance  \n",
+       "0  Orthodox  Orthodox  \n",
+       "1  Orthodox  Orthodox  \n",
+       "2  Orthodox  Orthodox  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2257,12 +2334,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "fight_stats.to_csv('../feature_engineered_fight.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
