--- a/3_cluster_fight_style/A_cluster_fighters_on_featured_data.ipynb
+++ b/3_cluster_fight_style/A_cluster_fighters_on_featured_data.ipynb
@@ -1489,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1728,6 +1728,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## pickle all\n",
+    "import pickle\n",
+    "\n",
+    "# Pickle the scaler\n",
+    "with open('../scaler.pkl', 'wb') as f:\n",
+    "    pickle.dump(scaler, f)\n",
+    "\n",
+    "# Pickle the dummy variables\n",
+    "with open('../dummy_variables.pkl', 'wb') as f:\n",
+    "    pickle.dump(df.drop(columns=numerical_features), f)\n",
+    "\n",
+    "# Pickle the cluster labels\n",
+    "with open('../cluster_labels.pkl', 'wb') as f:\n",
+    "    pickle.dump(cluster_labels, f)\n",
+    "\n",
+    "# Pickle the KMeans model\n",
+    "with open('../kmeans_model.pkl', 'wb') as f:\n",
+    "    pickle.dump(kmeans, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1750,7 +1776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
