--- a/4_predict_winner/1_feature_engineering.ipynb
+++ b/4_predict_winner/1_feature_engineering.ipynb
@@ -1534,6 +1534,7 @@
     "fight_stats['referee'] = data['referee']\n",
     "fight_stats['weightclass'] = data['weightclass']\n",
     "fight_stats['winner'] = 'f1'\n",
+    "fight_stats['date'] = data['fight_date']\n",
     "\n",
     "fight_stats['f1'] = data['f1']\n",
     "fight_stats['f2'] = data['f2']\n",
@@ -1634,6 +1635,7 @@
        "      <th>referee</th>\n",
        "      <th>weightclass</th>\n",
        "      <th>winner</th>\n",
+       "      <th>date</th>\n",
        "      <th>f1</th>\n",
        "      <th>f2</th>\n",
        "      <th>f1_slmp</th>\n",
@@ -1669,6 +1671,7 @@
        "      <td>Chris Tognoni</td>\n",
        "      <td>flyweight</td>\n",
        "      <td>f1</td>\n",
+       "      <td>2023-06-03</td>\n",
        "      <td>Karine Silva</td>\n",
        "      <td>Ketlen Souza</td>\n",
        "      <td>1.71</td>\n",
@@ -1702,6 +1705,7 @@
        "      <td>Mark Smith</td>\n",
        "      <td>heavyweight</td>\n",
        "      <td>f1</td>\n",
+       "      <td>2022-05-21</td>\n",
        "      <td>Jailton Almeida</td>\n",
        "      <td>Parker Porter</td>\n",
        "      <td>3.93</td>\n",
@@ -1734,25 +1738,29 @@
        "</div>"
       ],
       "text/plain": [
-       "         method        referee  weightclass winner               f1  \\\n",
-       "495  Submission  Chris Tognoni    flyweight     f1     Karine Silva   \n",
-       "997  Submission     Mark Smith  heavyweight     f1  Jailton Almeida   \n",
+       "         method        referee  weightclass winner        date  \\\n",
+       "495  Submission  Chris Tognoni    flyweight     f1  2023-06-03   \n",
+       "997  Submission     Mark Smith  heavyweight     f1  2022-05-21   \n",
        "\n",
-       "                f2  f1_slmp  f2_slmp  f1_str_acc_%  f2_str_acc_%  f1_sapm  \\\n",
-       "495   Ketlen Souza     1.71      0.0         30.00           NaN      0.0   \n",
-       "997  Parker Porter     3.93      0.0         52.94           NaN      0.0   \n",
+       "                  f1             f2  f1_slmp  f2_slmp  f1_str_acc_%  \\\n",
+       "495     Karine Silva   Ketlen Souza     1.71      0.0         30.00   \n",
+       "997  Jailton Almeida  Parker Porter     3.93      0.0         52.94   \n",
        "\n",
-       "     f2_sapm  f1_str_def_%  f2_str_def_%  f1_td_avg  f2_td_avg  f1_td_acc_%  \\\n",
-       "495     1.71           NaN         70.00       8.57        0.0          100   \n",
-       "997     3.93           NaN         47.06       3.27        0.0           50   \n",
+       "     f2_str_acc_%  f1_sapm  f2_sapm  f1_str_def_%  f2_str_def_%  f1_td_avg  \\\n",
+       "495           NaN      0.0     1.71           NaN         70.00       8.57   \n",
+       "997           NaN      0.0     3.93           NaN         47.06       3.27   \n",
        "\n",
-       "     f2_td_acc_%  f1_td_def_%  f2_td_def_%  f1_sub_avg  f2_sub_avg  f1_height  \\\n",
-       "495            0          100            0        0.57         0.0      165.1   \n",
-       "997            0          100           50        0.22         0.0      190.5   \n",
+       "     f2_td_avg  f1_td_acc_%  f2_td_acc_%  f1_td_def_%  f2_td_def_%  \\\n",
+       "495        0.0          100            0          100            0   \n",
+       "997        0.0           50            0          100           50   \n",
        "\n",
-       "     f2_height  f1_weight  f2_weight  f1_reach  f2_reach f1_stance f2_stance  \n",
-       "495     160.02      56.70      52.16    170.18    160.02  Orthodox  Orthodox  \n",
-       "997     182.88      92.99     120.20    200.66    190.50  Orthodox  Orthodox  "
+       "     f1_sub_avg  f2_sub_avg  f1_height  f2_height  f1_weight  f2_weight  \\\n",
+       "495        0.57         0.0      165.1     160.02      56.70      52.16   \n",
+       "997        0.22         0.0      190.5     182.88      92.99     120.20   \n",
+       "\n",
+       "     f1_reach  f2_reach f1_stance f2_stance  \n",
+       "495    170.18    160.02  Orthodox  Orthodox  \n",
+       "997    200.66    190.50  Orthodox  Orthodox  "
       ]
      },
      "metadata": {},
@@ -2159,6 +2167,7 @@
        "      <th>referee</th>\n",
        "      <th>weightclass</th>\n",
        "      <th>winner</th>\n",
+       "      <th>date</th>\n",
        "      <th>f1</th>\n",
        "      <th>f2</th>\n",
        "      <th>f1_slmp</th>\n",
@@ -2194,6 +2203,7 @@
        "      <td>Herb Dean</td>\n",
        "      <td>featherweight</td>\n",
        "      <td>f1</td>\n",
+       "      <td>2024-05-18</td>\n",
        "      <td>Lerone Murphy</td>\n",
        "      <td>Edson Barboza</td>\n",
        "      <td>8.80</td>\n",
@@ -2227,6 +2237,7 @@
        "      <td>Dan Miragliotta</td>\n",
        "      <td>welterweight</td>\n",
        "      <td>f1</td>\n",
+       "      <td>2024-05-18</td>\n",
        "      <td>Khaos Williams</td>\n",
        "      <td>Carlston Harris</td>\n",
        "      <td>8.00</td>\n",
@@ -2260,6 +2271,7 @@
        "      <td>Mark Smith</td>\n",
        "      <td>welterweight</td>\n",
        "      <td>f1</td>\n",
+       "      <td>2024-05-18</td>\n",
        "      <td>Themba Gorimbo</td>\n",
        "      <td>Ramiz Brahimaj</td>\n",
        "      <td>2.87</td>\n",
@@ -2292,10 +2304,10 @@
        "</div>"
       ],
       "text/plain": [
-       "                 method          referee    weightclass winner  \\\n",
-       "0  Decision - Unanimous        Herb Dean  featherweight     f1   \n",
-       "1                KO/TKO  Dan Miragliotta   welterweight     f1   \n",
-       "2  Decision - Unanimous       Mark Smith   welterweight     f1   \n",
+       "                 method          referee    weightclass winner        date  \\\n",
+       "0  Decision - Unanimous        Herb Dean  featherweight     f1  2024-05-18   \n",
+       "1                KO/TKO  Dan Miragliotta   welterweight     f1  2024-05-18   \n",
+       "2  Decision - Unanimous       Mark Smith   welterweight     f1  2024-05-18   \n",
        "\n",
        "               f1               f2  f1_slmp  f2_slmp f1_str_acc_%  \\\n",
        "0   Lerone Murphy    Edson Barboza     8.80     3.16        60.44   \n",
