--- a/3_cluster_fight_style/A_cluster_fighters_on_featured_data.ipynb
+++ b/3_cluster_fight_style/A_cluster_fighters_on_featured_data.ipynb
@@ -2398,6 +2398,13 @@
     "with open('../kmeans_model.pkl', 'wb') as f:\n",
     "    pickle.dump(kmeans, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2416,7 +2423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
